--- a/src/app/views/land-controls/file-viewer/file-viewer.component.html
+++ b/src/app/views/land-controls/file-viewer/file-viewer.component.html
@@ -1,8 +1,8 @@
 <div [style.height.%]="100"
-  [ngClass.gt-md]="{'card-floating-container': cardFloatingEffect}">
+  [class.card-floating-container-gt-md]="cardFloatingEffect">
 
   <div class="card card-border card-shadow"
-    [ngClass.gt-md]="{'card-floating-primary': cardFloatingEffect}">
+    [class.card-floating-primary-gt-md]="cardFloatingEffect">
 
     <div class="card-header card-header-flat">
 
