--- a/src/app/views/land-controls/recording-views-buttons/recording-views-buttons.component.html
+++ b/src/app/views/land-controls/recording-views-buttons/recording-views-buttons.component.html
@@ -1,6 +1,7 @@
-<div fxFlex="70px" [style.paddingTop.px]="2">
+<div [style.paddingTop.px]="2">
 
-  <button type="button" class="btn" fxFlex="62px"
+  <button type="button" class="btn"
+    [style.min-width]="'62px'"
     (click)="onRecordingMediaClicked()">
     Sello
   </button>
