--- a/src/app/views/land-list/land-explorer/land-explorer.component.html
+++ b/src/app/views/land-list/land-explorer/land-explorer.component.html
@@ -45,7 +45,7 @@
 
   <div class="card-body" [empNgSpinnerHost]="spinner">
 
-    <div fxLayout="column" fxFlexFill>
+    <div class="fx-column-container-fill">
 
       <emp-ng-spinner #spinner [visible]="isLoading">
 
