--- a/src/app/views/search-services/record-search/record-search-filter.component.html
+++ b/src/app/views/search-services/record-search/record-search-filter.component.html
@@ -1,10 +1,10 @@
 <form #form="ngForm" empNgFormKeyDownEnter autocomplete="off" class="form-section form-container">
 
-  <div fxLayout="column" fxLayoutGap="0.5rem" fxLayoutGap.lt-sm="0.5rem">
+  <div class="fx-column-container fx-gap-half">
 
-      <div fxLayout="row" fxLayout.lt-sm="column">
+      <div class="fx-row-container">
 
-        <div fxFlex="25">
+        <div class="fx-item-quarter">
 
           <label>Oficialía:</label>
 
@@ -19,7 +19,7 @@
 
         </div>
 
-        <div fxFlex="25">
+        <div class="fx-item-quarter">
 
           <label>Buscar:</label>
 
@@ -33,7 +33,7 @@
 
         </div>
 
-        <div fxFlex="50" fxLayoutAlign="start end">
+        <div class="fx-item-half fx-items-end">
 
           <div class="input-search-container">
 
