--- a/src/app/views/search-services/tract-index-explorer/tract-index-entries-history.component.html
+++ b/src/app/views/search-services/tract-index-explorer/tract-index-entries-history.component.html
@@ -1,4 +1,4 @@
-<div #tableContainer fxFlex="100" class="fill-table-container">
+<div #tableContainer class="fill-table-container">
 
   <emp-land-tract-index-entries-table
     [tractIndexEntriesList]="tractIndexEntriesList"
