--- a/src/app/workspaces/historic-registration/book-entry-main-page/book-entry-main-page.component.html
+++ b/src/app/workspaces/historic-registration/book-entry-main-page/book-entry-main-page.component.html
@@ -1,7 +1,7 @@
 <div class="explorer">
 
   <div class="primary"
-    [fxHide.lt-lg]="displayRegistryEntryEditor">
+    [class.md-hide]="displayRegistryEntryEditor">
 
     <emp-land-book-entry-edition #bookEntryEdition
       [recordingBookUID]="bookEntryContext.recordingBookUID"
