--- a/src/app/workspaces/land-transactions/transactions-main-page/transactions-main-page.component.html
+++ b/src/app/workspaces/land-transactions/transactions-main-page/transactions-main-page.component.html
@@ -3,8 +3,8 @@
 <div class="explorer">
 
   <div class="primary"
-       [fxHide]="displayFileViewer"
-       [fxHide.lt-lg]="displayTransactionTabbedView || displayFileViewer || displayRegistryEntryEditor">
+    [class.hidden]="displayFileViewer"
+    [class.md-hide]="displayTransactionTabbedView || displayFileViewer || displayRegistryEntryEditor">
 
     <emp-land-explorer
       [title]="currentView?.title"
@@ -25,9 +25,8 @@
 
 
   <div *ngIf="displayFileViewer"
-    class="primary-resizable primary-floating"
-    [fxHide.lt-lg]="displayRegistryEntryEditor"
-    [ngClass.lt-lg]="'primary-resizable-disable'"
+    class="primary-resizable primary-floating primary-resizable-disable-md"
+    [class.md-hide]="displayRegistryEntryEditor"
     empNgResizable>
 
     <emp-land-file-viewer
@@ -42,8 +41,8 @@
 
   <div *ngIf="displayTransactionTabbedView"
     class="secondary"
-    [fxHide]="displayRegistryEntryEditor"
-    [fxHide.lt-lg]="displayRegistryEntryEditor || displayFileViewer">
+    [class.hidden]="displayRegistryEntryEditor"
+    [class.md-hide]="displayRegistryEntryEditor || displayFileViewer">
 
     <emp-land-transaction-tabbed-view
         [transaction]="selectedTransaction"
