--- a/src/app/views/certificate-emission/certificate-creator.component.html
+++ b/src/app/views/certificate-emission/certificate-creator.component.html
@@ -1,10 +1,11 @@
-<form [formGroup]="form" empNgFormKeyDownEnter autocomplete="off" class="form-section">
+<form [formGroup]="form" empNgFormKeyDownEnter autocomplete="off" class="form-section"
+  [style.margin-right.px]="-8">
 
-  <div fxLayout="column" fxLayoutGap="0.75rem">
+  <div class="fx-column-container fx-gap-three-quarter">
 
-    <div fxLayout="row">
+    <div class="fx-row-container">
 
-      <div [fxFlex]="100/3">
+      <div class="fx-item-third">
         <label>Tipo de certificado:</label>
         <emp-ng-select formControlName="certificateType"
           [items]="certificateTypesList"
@@ -14,7 +15,7 @@
         </emp-ng-select>
       </div>
 
-      <div [fxFlex]="200/3">
+      <div class="fx-item-two-third">
         <label>Sobre:</label>
         <emp-ng-select formControlName="registrationCommand"
           [items]="issuingCommandsList"
@@ -26,11 +27,11 @@
 
     </div>
 
-    <div fxLayout="row" *ngIf="certificateRulesSelected.selectSubject">
+    <div class="fx-row-container" *ngIf="certificateRulesSelected.selectSubject">
 
-        <div [fxFlex]="100/3"></div>
+        <div class="fx-item-third"></div>
 
-        <div [fxFlex]="200/3">
+        <div class="fx-item-two-third">
           <label class="ellipsis"> Buscar y seleccionar el folio real: </label>
           <emp-land-recordable-subject-searcher
             formControlName="recordableSubject"
@@ -49,9 +50,9 @@
         Inscripción donde está registrado el predio
       </div>
 
-      <div fxlayout="row">
+      <div class="fx-row-container">
 
-        <emp-land-recording-book-selector fxFlex="100"
+        <emp-land-recording-book-selector class="fx-item-size" style="--size: 100%"
           [recorderOffice]="recorderOffice"
           [checkBookEntryInput]="checkBookEntryInput"
           selectorPosition="top"
@@ -63,9 +64,9 @@
 
     </ng-container>
 
-    <div fxLayout="row" *ngIf="certificateRulesSelected.givePersonName">
+    <div class="fx-row-container" *ngIf="certificateRulesSelected.givePersonName">
 
-      <div fxFlex="100">
+      <div class="fx-item">
         <label> Nombre completo de la persona: </label>
         <input formControlName="personName"
           type="text" class="text-box"
@@ -75,9 +76,9 @@
     </div>
 
 
-    <div fxLayout="row" *ngIf="certificateRulesSelected.giveRealEstateDescription">
+    <div class="fx-row-container" *ngIf="certificateRulesSelected.giveRealEstateDescription">
 
-      <div fxFlex="100">
+      <div class="fx-item">
         <label> Descripción y datos del predio: </label>
         <textarea class="text-area" empNgTextareaAutoresize [maxHeightTextarea]="null" rows="1"
           formControlName="realEstateDescription"
@@ -90,9 +91,9 @@
 
     <mat-divider class="horizontal"></mat-divider>
 
-    <div fxLayout="row">
+    <div class="fx-row-container">
 
-      <div fxFlex fxLayoutAlign="end">
+      <div class="fx-item fx-end fx-items-center">
 
         <button type="submit"
           [class.btn]="!formHelper.isFormReady(form)"
