--- a/src/app/views/transactions/transaction-files/transaction-files.component.html
+++ b/src/app/views/transactions/transaction-files/transaction-files.component.html
@@ -1,12 +1,12 @@
 <form autocomplete="off" class="form-section">
 
-  <div fxLayout="column" fxLayout.lt-md="column" fxLayoutGap="0.75rem" fxLayoutGap.lt-md="0">
+  <div class="fx-column-container fx-gap-half">
 
     <div class="section-title">Documentos digitalizados asociados al trámite</div>
 
-    <div fxLayout="row" fxLayout.lt-md="column">
+    <div class="fx-row-container sm-fx-column-container">
 
-      <div fxFlex="50%">
+      <div class="fx-item-half sm-fx-item">
         <label>Instrumento:</label>
         <emp-ng-file-control
           [fileControl]="mainFile"
@@ -19,7 +19,7 @@
         </emp-ng-file-control>
       </div>
 
-      <div fxFlex="50%">
+      <div class="fx-item-half sm-fx-item">
         <label>Anexos:</label>
         <emp-ng-file-control
           [fileControl]="auxiliaryFile"
