--- a/src/app/views/transactions/workflow-commander/workflow-command-config.component.html
+++ b/src/app/views/transactions/workflow-commander/workflow-command-config.component.html
@@ -1,10 +1,10 @@
 <form [formGroup]="form" empNgFormKeyDownEnter autocomplete="off" class="form-section">
 
-  <div fxLayout="column" fxLayout.lt-md="column" fxLayoutGap="0.75rem" fxLayoutGap.lt-md="0">
+  <div class="fx-column-container fx-gap-half">
 
-    <div fxLayout="row" fxLayout.lt-md="column">
+    <div class="fx-row-container sm-fx-column-container">
 
-      <div [fxFlex]="100/3">
+      <div class="fx-item-third sm-fx-item">
         <label>Operación:</label>
         <emp-ng-select formControlName="command"
           [items]="applicableCommandsList"
@@ -14,7 +14,8 @@
         </emp-ng-select>
       </div>
 
-      <div *ngIf="requiredNextStatusField" [fxFlex]="100/3">
+      <div *ngIf="requiredNextStatusField"
+        class="fx-item-third sm-fx-item">
         <label>Nuevo estado:</label>
         <emp-ng-select formControlName="nextStatus"
           [items]="commandSelected.nextStatus"
@@ -24,7 +25,8 @@
         </emp-ng-select>
       </div>
 
-      <div *ngIf="requiredNextUserField" [fxFlex]="100/3">
+      <div *ngIf="requiredNextUserField"
+        class="fx-item-third sm-fx-item">
         <label>{{labelNextUser}}</label>
         <emp-ng-select formControlName="nextUser"
           [items]="statusSelected.users"
@@ -33,7 +35,8 @@
         </emp-ng-select>
       </div>
 
-      <div *ngIf="requiredAuthorizationField" [fxFlex]="100/3">
+      <div *ngIf="requiredAuthorizationField"
+        class="fx-item-third sm-fx-item">
         <label>Firma electrónica:</label>
         <input formControlName="authorization" class="text-box" type="password" autocomplete="new-password"
           [class.invalid-control]="formHelper.isControlInvalid(form.controls.authorization)">
@@ -43,9 +46,9 @@
 
     <ng-container *ngIf="commandSelected.type !== 'None'">
 
-      <div fxLayout="row" fxLayout.lt-md="column">
+      <div class="fx-row-container sm-fx-column-container">
 
-        <div fxFlex>
+        <div class="fx-item">
           <label>Observaciones:</label>
           <textarea formControlName="note" empNgTextareaAutoresize rows="1" class="text-area"></textarea>
         </div>
