--- a/src/styles/explorer.scss
+++ b/src/styles/explorer.scss
@@ -49,14 +49,21 @@
     margin-right: -15px;
   }
 
-  .primary-resizable-disable {
-    flex: 1 1 600px;
-    min-width: 400px;
-    max-width: 960px;
-  }
 
-  .primary-resizable-disable::after {
-    display: none;
+  .primary-resizable-disable-md {
+
+    @include medium() {
+
+      flex: 1 1 600px;
+      min-width: 400px;
+      max-width: 960px;
+
+      &::after {
+        display: none;
+      }
+
+    }
+
   }
 
   .secondary {
